--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
+    <link rel="stylesheet" href="assets/style.css">
+    <!-- Icones -->
     <link rel="stylesheet" href="style.css">
 
     <!-- Fonts -->
@@ -20,10 +22,22 @@
   <body>
     <header id="header">
         <nav class="container">
-            <a class="logo" href="#">beauty<span>salon</span>.</a>
-            <div class="menu">...</div>
+          <a class="logo" href="#">beauty<span>salon</span>.</a>
+          <!-- menu -->
+          <div class="menu">
+            <ul class="grid">
+              <li><a class="title" href="#home">Início</a></li>
+              <li><a class="title" href="#about">Sobre</a></li>
+              <li><a class="title" href="#services">Serviços</a></li>
+              <li><a class="title" href="#testimonials">Depoimentos</a></li>
+              <li><a class="title" href="#contact">Contato</a></li>
+            </ul>
+          </div>
+          <!-- /menu -->
+          <div class="toggle icon-menu"></div>
+          <div class="toggle icon-close"></div>
         </nav>
-    </header>
+      </header>
 
 
     <main>
@@ -36,7 +50,7 @@
                 />
                </div>
                <div class="text">
-                <h1>Saúde natural para os seus cabelos</h1>
+                <h2 class="h2">Saúde natural para os seus cabelos</h2>
                 <p>
                     Um salão exclusivo em São paulo, especializado em tratamento naturais
                 </p>
@@ -48,9 +62,51 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">
-          <div class="container">outra section</div>
+      <section class="section" id="about">
+          <div class="container grid">
+              <div class="image">
+                  <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="3 mulheres sorrindo">
+              </div>
+              <div class="text">
+                  <h2 class="title">Sobre nós</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ducimus reiciendis reprehenderit. Culpa provident velit, aperiam similique ut totam quae quia magni rerum quod ipsa. Porro repellat a at molestias.</p>
+                  <br>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, ad sit dolorum dolorem ipsum quod, cumque veritatis minus placeat, architecto tenetur repudiandae sed iste quis dignissimos laboriosam iusto ipsam temporibus?</p>
+                  <br>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas odit neque explicabo deleniti, iure voluptatem quaerat sed, velit dolores a incidunt autem eveniet quis sunt nisi eaque, cupiditate doloribus.</p>
+              </div>
+          </div>
       </section>
+
+      <div class="divider-2"></div>
+
+      <section class="section" id="services">
+        <div class="container grid">
+            <header>
+                <h2 class="title">Serviços</h2>
+                <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+            </header>
+            <div class="cards grid">
+                <div class="card">
+                    <i class="icon-woman-hair"></i>
+                    <h3 class="title">Terapica capilar</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga incidunt ea error repellendus corporis. Rem molestiae eum tempore!</p>
+                </div>
+                <div class="card">
+                    <i class="icon-trim"></i>
+                    <h3 class="title">Cortes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolorum provident quod delectus voluptatem laudantium fugit aliquam ratione, ab neque doloremque dolor voluptate ad dignissimos enim reiciendis illo quam cupiditate?</p>
+                </div>
+                <div class="card">
+                    <i class="icon-cosmetic"></i>
+                    <h3 class="title">Tratamentos</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci impedit nemo culpa ipsam sequi! Voluptate illo, quidem odit obcaecati possimus, tenetur nulla, sunt repellat a iste quibusdam quasi temporibus quos.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
+
+    <script src="/main.js"></script>
   </body>
 </html>
