--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-
-    
+    />   
 
 
   </head>
   <body>
     <header id="header">
         <nav class="container">
-          <a class="logo" href="#">beauty<span>salon</span>.</a>
+          <a class="logo" href="#home">beauty<span>salon</span>.</a>
           <!-- menu -->
           <div class="menu">
             <ul class="grid">
@@ -93,7 +91,7 @@
         <div class="container grid">
             <header>
                 <h2 class="title">Serviços</h2>
-                <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+                <p class="subtitle">Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
             </header>
             <div class="cards grid">
                 <div class="card">
@@ -221,6 +219,32 @@
       <div class="divider-1"></div>
 
     </main>
+
+    
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
+          <p>©2021 Beautysalon.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
       <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
